--- a/app/views/MyDisques/index.html
+++ b/app/views/MyDisques/index.html
@@ -7,7 +7,7 @@
     {%for disque in disques%}
       <li class="list-group-item">
         <span class="glyphicon glyphicon-hdd"></span><strong>{{disque.getNom()}}</strong>
-        {{DirectoryUtils.formatBytes(disque.getOccupation()/100*disque.getQuota(),2)}}
+        {{disque.occupation}}
       </li>
     {%endfor%}
   </ul>
