--- a/app/views/MyDisques/index.html
+++ b/app/views/MyDisques/index.html
@@ -10,7 +10,7 @@
         <span class="label label-default">{{disque.occupation}} / {{disque.occupationTotal}}</span>
 
         <div class="progress">
-          <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{disque.getOccupation()}}" aria-valuemin="0" aria-valuemax="100" style="width: {{disque.getOccupation()}}%; min-width: 3em;">
+          <div class="progress-bar progress-bar-striped progress-bar-{{disque.progressStyle}} active" role="progressbar" aria-valuenow="{{disque.getOccupation()}}" aria-valuemin="0" aria-valuemax="100" style="width: {{disque.getOccupation()}}%; min-width: 3em;">
             {{disque.getOccupation()}}%
           </div>
         </div>
