--- a/app/views/MyDisques/index.html
+++ b/app/views/MyDisques/index.html
@@ -15,10 +15,10 @@
           </div>
         </div>
 
-        <button type="button" class="btn btn-primary btn-block">
+        <a href="Scan/show/{{disque.id}}" type="button" class="btn btn-primary btn-block">
           <span class="glyphicon glyphicon-folder-open" style="margin-right: 5px;"></span>
           Ouvrir
-        </button>
+        </a>
       </li>
     {%endfor%}
   </ul>
