--- a/app/views/scan/vFolder.html
+++ b/app/views/scan/vFolder.html
@@ -7,6 +7,25 @@
 		</ul>
 		<div class="tab-content">
 			<div role="tabpanel" class="tab-pane active" id="Home">
+				<div class="panel panel-default">
+					<div class="panel-heading">Caractéristiques du disque</div>
+					<!--<div class="panel-body">
+						<p>...</p>
+					</div>-->
+
+					<ul class="list-group">
+						<li class="list-group-item">
+							Nom: {{diskName}}
+							<button class="btn btn-default">
+								<span class="glyphicon glyphicon-edit"></span>
+								Modifier
+							</button>
+						</li>
+						<li class="list-group-item">
+							Propriétaire: {{user.login}}
+						</li>
+					</ul>
+				</div>
 				<!--
 				//TODO 4.3 implémenter à partir de DisqueController/indexAction
 				-->
