--- a/app/views/scan/vFolder.html
+++ b/app/views/scan/vFolder.html
@@ -22,7 +22,7 @@
 							</button>
 						</li>
 						<li class="list-group-item">
-							Propriétaire: {{user.login}}
+							Propriétaire: {{user.getLogin()}}
 						</li>
 					</ul>
 				</div>
