--- a/app/views/MyDisques/index.html
+++ b/app/views/MyDisques/index.html
@@ -10,17 +10,21 @@
         <span class="label label-default">{{disque.occupation}} / {{disque.occupationTotal}}</span>
 
         <div class="progress" style="margin-top: 10px;">
-          <div class="progress-bar progress-bar-striped progress-bar-{{disque.progressStyle}} active"
-               role="progressbar" aria-valuenow="{{disque.getOccupation()}}" aria-valuemin="0"
-               aria-valuemax="100" style="width: {{disque.getOccupation()}}%; min-width: 3em;">
+          <div
+              class="progress-bar progress-bar-striped progress-bar-{{disque.progressStyle}} active"
+              role="progressbar"
+              aria-valuenow="{{disque.getOccupation()}}"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              style="width: {{disque.getOccupation()}}%; min-width: 3em;">
             {{disque.getOccupation()}}%
           </div>
         </div>
 
-        <button type="button" class="btn btn-primary btn-block">
+        <a href="Scan/show/{{disque.id}}" type="button" class="btn btn-primary btn-block">
           <span class="glyphicon glyphicon-folder-open" style="margin-right: 5px;"></span>
           Ouvrir
-        </button>
+        </a>
       </li>
     {%endfor%}
   </ul>
