--- a/app/views/scan/vFolder.html
+++ b/app/views/scan/vFolder.html
@@ -22,7 +22,16 @@
 							</button>
 						</li>
 						<li class="list-group-item">
-							Propriétaire: {{user.login}}
+							Propriétaire: {{user.getLogin()}}
+						</li>
+						<li class="list-group-item">
+							<h4>Occupation</h4>
+							<p>{{disk.occupation}} ({{disk.getOccupation()}}%) sur {{disk.occupationTotal}}</p>
+							<span class="label label-{{disk.style}}">{{disk.status}}</span>
+						</li>
+						<li class="list-group-item">
+							<h4>Tarification</h4>
+							<p>Prix: </p>
 						</li>
 					</ul>
 				</div>
