--- a/app/views/scan/vFolder.html
+++ b/app/views/scan/vFolder.html
@@ -42,7 +42,7 @@
 					</ul>
 				</div>
 
-				<a href="Disques/index" class="btn btn-primary btn-block">
+				<a href="MyDisques/index" class="btn btn-primary btn-block">
 					<span class="glyphicon glyphicon-folder-close"></span>
 					Fermer et retourner à <strong>Mes disques</strong>
 				</a>
