--- a/app/views/scan/vFolder.html
+++ b/app/views/scan/vFolder.html
@@ -13,10 +13,10 @@
 					<ul class="list-group">
 						<li class="list-group-item">
 							<strong>Nom</strong>: {{diskName}}
-							<button class="btn btn-default">
+							<a href="" class="btn btn-default">
 								<span class="glyphicon glyphicon-edit"></span>
 								Modifier
-							</button>
+							</a>
 						</li>
 						<li class="list-group-item">
 							<strong>Propriétaire</strong>: {{user.getLogin()}}
