--- a/app/views/scan/vFolder.html
+++ b/app/views/scan/vFolder.html
@@ -28,7 +28,7 @@
 						</li>
 						<li class="list-group-item">
 							<h4>Tarification</h4>
-							<p>{{disk.getDisqueTarifs()[0].getTarif()}}</p>
+							<p>{{tarif}}</p>
 							<button class="btn btn-default">
 								<span class="glyphicon glyphicon-edit"></span>
 								Modifier la tarification...
