--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -3,14 +3,70 @@
 <ul class="list-group">
   <li class="list-group-item">
     <span class="glyphicon glyphicon-user"></span>
-    <h4 style="display: inline;">Utilisateurs</h4>
+    <h4 style="display: inline-block;">Utilisateurs</h4>
     <span class="label label-info">2 nouveaux</span>
 
     <div class="btn-group-md pull-right">
       <button class="btn btn-primary">
         <span class="glyphicon glyphicon-search"></span>
         Ouvrir
-        <span class="badge">4</span>
+        <span class="badge">5</span>
+      </button>
+      <button class="btn btn-default">
+        <span class="glyphicon glyphicon-plus-sign"></span>
+        Nouveau...
+      </button>
+    </div>
+    <div class="clearfix"></div>
+  </li>
+  <li class="list-group-item">
+    <span class="glyphicon glyphicon-folder-close"></span>
+    <h4 style="display: inline-block;">Disques</h4>
+    <span class="label label-info">1 nouveaux</span>
+
+    <div class="btn-group-md pull-right">
+      <button class="btn btn-primary">
+        <span class="glyphicon glyphicon-search"></span>
+        Ouvrir
+        <span class="badge">6</span>
+      </button>
+      <button class="btn btn-default">
+        <span class="glyphicon glyphicon-plus-sign"></span>
+        Nouveau...
+      </button>
+    </div>
+    <div class="clearfix"></div>
+  </li>
+  <li class="list-group-item">
+    <span class="glyphicon glyphicon-euro"></span>
+    <h4 style="display: inline-block;">Tarifs</h4>
+
+    <div class="btn-group-md pull-right">
+      <button class="btn btn-primary">
+        <span class="glyphicon glyphicon-search"></span>
+        Ouvrir
+        <span class="badge">2</span>
+      </button>
+      <button class="btn btn-default">
+        <span class="glyphicon glyphicon-plus-sign"></span>
+        Nouveau...
+      </button>
+    </div>
+    <div class="clearfix"></div>
+  </li>
+  <li class="list-group-item">
+    <span class="glyphicon glyphicon-gift"></span>
+    <h4 style="display: inline-block;">Services</h4>
+
+    <div class="btn-group-md pull-right">
+      <button class="btn btn-primary">
+        <span class="glyphicon glyphicon-search"></span>
+        Ouvrir
+        <span class="badge">5</span>
+      </button>
+      <button class="btn btn-default">
+        <span class="glyphicon glyphicon-plus-sign"></span>
+        Nouveau...
       </button>
     </div>
     <div class="clearfix"></div>
