--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -4,13 +4,15 @@
   <li class="list-group-item">
     <span class="glyphicon glyphicon-user"></span>
     <h4 style="display: inline-block;">Utilisateurs</h4>
-    <span class="label label-info">2 nouveaux</span>
+    {% if count.today.user %}
+      <span class="label label-info">{{count.today.user}} nouveaux</span>
+    {% endif %}
 
     <div class="btn-group-md pull-right">
       <button class="btn btn-primary">
         <span class="glyphicon glyphicon-search"></span>
         Ouvrir
-        <span class="badge">5</span>
+        <span class="badge">{{count.all.user}}</span>
       </button>
       <button class="btn btn-default">
         <span class="glyphicon glyphicon-plus-sign"></span>
@@ -22,13 +24,15 @@
   <li class="list-group-item">
     <span class="glyphicon glyphicon-folder-close"></span>
     <h4 style="display: inline-block;">Disques</h4>
-    <span class="label label-info">1 nouveaux</span>
+    {% if count.today.disk %}
+    <span class="label label-info">{{count.today.disk}} nouveaux</span>
+    {% endif %}
 
     <div class="btn-group-md pull-right">
       <button class="btn btn-primary">
         <span class="glyphicon glyphicon-search"></span>
         Ouvrir
-        <span class="badge">6</span>
+        <span class="badge">{{count.all.disk}}</span>
       </button>
       <button class="btn btn-default">
         <span class="glyphicon glyphicon-plus-sign"></span>
@@ -45,7 +49,7 @@
       <button class="btn btn-primary">
         <span class="glyphicon glyphicon-search"></span>
         Ouvrir
-        <span class="badge">2</span>
+        <span class="badge">{{count.all.tarif}}</span>
       </button>
       <button class="btn btn-default">
         <span class="glyphicon glyphicon-plus-sign"></span>
@@ -62,7 +66,7 @@
       <button class="btn btn-primary">
         <span class="glyphicon glyphicon-search"></span>
         Ouvrir
-        <span class="badge">5</span>
+        <span class="badge">{{count.all.service}}</span>
       </button>
       <button class="btn btn-default">
         <span class="glyphicon glyphicon-plus-sign"></span>
