--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -5,15 +5,15 @@
     <span class="glyphicon glyphicon-user"></span>
     <h4 style="display: inline-block;">Utilisateurs</h4>
     {% if count.today.user %}
-      <span class="label label-info">{{count.today.user}} nouveaux</span>
+      <span class="label label-info">{{count.today.user}} {% if count.today.user == 1 %} nouveau {% else %} nouveaux {% endif %}</span>
     {% endif %}
 
     <div class="btn-group-md pull-right">
-      <button class="btn btn-primary">
+      <a class="btn btn-primary" href="Admin/user">
         <span class="glyphicon glyphicon-search"></span>
         Ouvrir
         <span class="badge">{{count.all.user}}</span>
-      </button>
+      </a>
       <button class="btn btn-default">
         <span class="glyphicon glyphicon-plus-sign"></span>
         Nouveau...
@@ -25,7 +25,7 @@
     <span class="glyphicon glyphicon-folder-close"></span>
     <h4 style="display: inline-block;">Disques</h4>
     {% if count.today.disk %}
-    <span class="label label-info">{{count.today.disk}} nouveaux</span>
+    <span class="label label-info">{{count.today.disk}} {% if count.today.disk == 1 %} nouveau {% else %} nouveaux {% endif %}</span>
     {% endif %}
 
     <div class="btn-group-md pull-right">
