--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -29,11 +29,11 @@
     {% endif %}
 
     <div class="btn-group-md pull-right">
-      <button class="btn btn-primary">
+      <a class="btn btn-primary" href="Admin/disques">
         <span class="glyphicon glyphicon-search"></span>
         Ouvrir
         <span class="badge">{{count.all.disk}}</span>
-      </button>
+      </a>
       <button class="btn btn-default">
         <span class="glyphicon glyphicon-plus-sign"></span>
         Nouveau...
