--- a/app/views/Admin/disques.html
+++ b/app/views/Admin/disques.html
@@ -8,7 +8,7 @@
     {% for disk in user.disks %}
       <li class="list-group-item">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-4">
             {{disk.nom}}
           </div>
           <div class="col-md-3">
@@ -17,23 +17,27 @@
           <div class="col-md-3">
             <div class="progress">
               <div
-                  class="progress-bar progress-bar-striped"
+                  class="progress-bar progress-bar-info progress-bar-striped"
                   role="progressbar"
                   aria-valuenow="{{disk.getOccupation()}}"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: {{disk.getOccupation()}}%; min-width: 3em;">
+                  {% if disk.getOccupation() != 0 %}
+                    style="width: {{disk.getOccupation()}}%; min-width: 3em;"
+                  {% endif %}
+              >
                 {{disk.getOccupation()}}%
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-2">
             <button class="btn btn-primary">
               <span class="glyphicon glyphicon-search"></span>
               Ouvrir
             </button>
           </div>
         </div>
+        <div class="clearfix"></div>
       </li>
     {% endfor %}
   </ul>
