--- a/app/views/main/vHeader.html
+++ b/app/views/main/vHeader.html
@@ -56,6 +56,10 @@
 		<div class="panel panel-default">
 		<div class="panel-body">
 		<ol class="breadcrumb">
-			<li><a href="{{config["siteUrl"]}}"><span class="glyphicon glyphicon-home"
-					aria-hidden="true"></span>&nbsp;Accueil</a></li>
+			<li>
+				<a href="{{config["siteUrl"]}}">
+					<span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;
+					Accueil
+				</a>
+			</li>
 		</ol>
