--- a/app/views/Disques/create.html
+++ b/app/views/Disques/create.html
@@ -1,5 +1,6 @@
 <form method="post" action="Disques/update">
   <div class="input-group">
+    <input type="hidden" name="id">
     <input type="text" name="nom" placeholder="Nom du disque" class="form-control">
   </div>
 
