--- a/app/views/scan/vFolder.html
+++ b/app/views/scan/vFolder.html
@@ -13,7 +13,7 @@
 					<ul class="list-group">
 						<li class="list-group-item">
 							<strong>Nom</strong>: {{diskName}}
-							<a href="" class="btn btn-default">
+							<a href="Scan/rename/{{disk.getId()}}" class="btn btn-default">
 								<span class="glyphicon glyphicon-edit"></span>
 								Modifier
 							</a>
