--- a/app/views/scan/vFolder.html
+++ b/app/views/scan/vFolder.html
@@ -13,7 +13,7 @@
 					<ul class="list-group">
 						<li class="list-group-item">
 							<strong>Nom</strong>: {{diskName}}
-							<a href="Scan/rename/{{disk.getId()}}" class="btn btn-default">
+							<a href="Scan/show/{{disk.getId()}}/rename" class="btn btn-default">
 								<span class="glyphicon glyphicon-edit"></span>
 								Modifier
 							</a>
@@ -29,10 +29,10 @@
 						<li class="list-group-item">
 							<h4>Tarification</h4>
 							<p>{{tarif}}</p>
-							<button class="btn btn-default">
+							<a href="Scan/show/{{disk.getId()}}/changeTarif" class="btn btn-default">
 								<span class="glyphicon glyphicon-edit"></span>
 								Modifier la tarification...
-							</button>
+							</a>
 						</li>
 						<li class="list-group-item">
 							<h4>Services</h4>
