--- a/app/views/scan/changeTarif.html
+++ b/app/views/scan/changeTarif.html
@@ -7,6 +7,15 @@
   </div>
 
   <div class="form-group">
+    <label for="tarif">Choix du tarif</label>
+    <select name="tarif" id="tarif" class="form-control">
+      {% for tarif in tarifs %}
+        <option value="{{tarif.id}}"{%if tarif.id == selected %} selected {% endif %}>{{tarif.quota}}{{tarif.unite}} pour {{tarif.prix}}€ avec marge de dépassement de {{tarif.margeDepassement * 100}}% (Coût de dépassement {{tarif.coutDepassement}}€/{{tarif.unite}})</option>
+      {% endfor %}
+    </select>
+  </div>
+
+  <div class="form-group">
     <button type="submit" class="btn btn-primary pull-right">Changer la tarification</button>
   </div>
   <div class="clearfix"></div>
