--- a/app/views/MyDisques/index.html
+++ b/app/views/MyDisques/index.html
@@ -1,8 +1,8 @@
 <div id="content">
   <h4>Mes disques -> {{user}}</h4>
-  <button class="btn btn-primary"  type="button">
+  <a href="MyDisques/update" class="btn btn-primary" type="button">
     <span class="glyphicon glyphicon-plus-sign"></span> Créer un disque
-  </button>
+  </a>
   <ul class="list-group">
     {%for disque in disques%}
       <li class="list-group-item">
